<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D5D5D5"
    android:gravity="center"
    tools:context="com.example.i312_04.projectandroid0208.ProjectAndroid0212Next">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/restaurant"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/res"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/convenience"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/con"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/atm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/atm"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/bakery"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/bak"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/subway"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/sub"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/postoffice"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/pos"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/hospital"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/hos"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/lib"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

    </LinearLayout>



        <TextView
            android:id="@+id/bank"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/ban"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/cafe"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/cof"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/busstation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/bus"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/lodging"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/aco"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/gasstation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/gas"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/movie"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/mov"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/spa"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/spa"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

        <TextView
            android:id="@+id/laundry"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/lau"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="25dp"
            android:layout_margin="10dp"
            android:background="@drawable/button2"/>

            <TextView
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/bac"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_margin="10dp"
            android:background="@drawable/button4"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>

